--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/google-translate-api": "^2.3.0",
     "@types/inquirer": "^6.5.0",
-    "@types/node": "^12.12.14"
+    "@types/node": "^12.12.14",
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
